--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "dicom-parser": "^1.8.7",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
