--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "dicom-parser": "^1.8.7",
+    "konva": "^7.2.5",
     "next": "^10.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-konva": "*"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
