--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,8 @@
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "jsx-a11y/anchor-is-valid": "off"
+    "jsx-a11y/anchor-is-valid": "off",
+    "@typescript-eslint/no-unused-vars": "off"
   },
   "settings": {
     "react": {
