--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.0",
     "dicom-parser": "^1.8.7",
     "konva": "^7.2.5",
     "next": "^10.0.0",
