--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.0",
+    "clsx": "^1.1.1",
     "dicom-parser": "^1.8.7",
     "konva": "^7.2.5",
     "next": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-konva": "*"
+    "react-icons": "^4.2.0",
+    "react-konva": "*",
+    "react-virtualized-auto-sizer": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/wicg-native-file-system": "^2020.6.0",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
