--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-konva": "*",
-    "react-virtualized-auto-sizer": "^1.0.5"
+    "react-virtualized-auto-sizer": "^1.0.5",
+    "ts-pattern": "^3.1.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
