--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint --fix 'src/**/*.{ts,tsx,js,jsx}'",
     "lint-check": "eslint 'src/**/*.{ts,tsx,js,jsx}' --max-warnings 0",
     "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'",
-    "format-check": "prettier --check 'src/**/*.{ts,tsx,js,jsx}'"
+    "format-check": "prettier --check 'src/**/*.{ts,tsx,js,jsx}'",
+    "types-check": "npx tsc --noEmit",
+    "check": "npm run types-check && npm run lint-check && npm run format-check",
+    "fix": "npm run lint && npm run format"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.0",
