--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-konva": "*",
+    "react-use": "^17.2.4",
     "react-virtualized-auto-sizer": "^1.0.5",
     "ts-pattern": "^3.1.5"
   },
