--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "change-case": "^4.1.2",
     "clsx": "^1.1.1",
     "dicom-parser": "^1.8.7",
+    "immer": "^9.0.2",
     "konva": "^7.2.5",
     "next": "^10.0.0",
     "react": "^17.0.2",
@@ -28,11 +29,13 @@
     "react-konva": "*",
     "react-use": "^17.2.4",
     "react-virtualized-auto-sizer": "^1.0.5",
-    "ts-pattern": "^3.1.5"
+    "ts-pattern": "^3.1.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/uuid": "^8.3.0",
     "@types/wicg-native-file-system": "^2020.6.0",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
