--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "fix": "npm run lint-fix && npm run format-fix"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.6.0",
+    "@chakra-ui/react": "^1.6.2",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "change-case": "^4.1.2",
     "clsx": "^1.1.1",
     "dicom-parser": "^1.8.7",
+    "framer-motion": "^4.1.17",
     "immer": "^9.0.2",
     "konva": "^7.2.5",
     "next": "^10.0.0",
