--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "dicom-parser": "^1.8.7",
     "framer-motion": "^4.1.17",
     "immer": "^9.0.2",
-    "konva": "^7.2.5",
+    "konva": "^8.0.1",
     "next": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-konva": "*",
+    "react-konva": "^17.0.2-3",
     "react-use": "^17.2.4",
     "react-virtualized-auto-sizer": "^1.0.5",
     "ts-pattern": "^3.1.5",
