--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
     "jsx-a11y/anchor-is-valid": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "unused-imports/no-unused-imports": "warn",
-    "simple-import-sort/imports": "error"
+    "simple-import-sort/imports": "warn"
   },
   "settings": {
     "react": {
