--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,12 @@
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/prefer-namespace-keyword": "off",
     "unused-imports/no-unused-imports": "warn",
-    "simple-import-sort/imports": "warn"
+    "simple-import-sort/imports": [
+      "warn",
+      {
+        "groups": [["^\\u0000"], ["^@?\\w"], ["^src(/.*|$)"], ["^\\."]]
+      }
+    ]
   },
   "settings": {
     "react": {
